--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -38,3 +38,7 @@
 [prune]
   go-tests = true
   unused-packages = true
+
+[[constraint]]
+  name = "github.com/c-bata/go-prompt"
+  version = "0.2.1"
